# rssbot

./: .gitignore  Cargo.toml  README.md  build.rs
src/: lib.rs
tests/: decode_bench.rs
