[package]
name = "rssbot"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coolq-sdk-rust = { path = "../coolq-sdk-rust" }
tokio = { version = "0.2.12", default-features = false, features = ["rt-threaded", "time", "sync", "parking_lot"] }
reqwest = { version = "0.10.3", features = ["rustls-tls"] }
rss = { version = "1.9.0", features = ["validation"] }
atom_syndication = "0.8.0"
#hotpot-db = "0.0.2"
#hotpot-db = { path = "../hotpot-db" }
serde = "1.0.104"
bincode = "1.2.1"
once_cell = "1.3.1"
sled = "0.31.0"
url = "2.1.1"
chrono = "0.4.10"
regex = "1.3.4"
time = "0.1.39"

[build-dependencies]
#coolq-sdk-rust = { git = "https://github.com/juzi5201314/coolq-sdk-rust" }
coolq-sdk-rust = { path = "../coolq-sdk-rust" }

[dev-dependencies]
serde = "1.0.104"
bincode = "1.2.1"
serde_json = "1.0.48"
serde_cbor = "0.11.1"
rmp-serde = "0.14.3"
postcard = "0.4.3"
heapless = "0.5.3"

[lib]
crate-type = ["cdylib"]
name = "app"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"